src/objects/MDM_ProductCategory__c.object
<CustomObject>
    <description>This is actually what we will refer to as the category and the value that will be shown in the product UI</description>
    <fields>
        <fullName>CategoryFamilyName__c</fullName>
        <description>This is True Category family name for a set of categories</description>
        <inlineHelpText>This is True Category family name for a set of categories</inlineHelpText>
        <label>CategoryFamilyName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <externalId>true</externalId>
        <label>EnterpriseID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCategoryID__c</fullName>
        <description>This ID will be EnterpriseID.Whereas Data steward has control over the org refresh.</description>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>ProductCategoryID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Product SubCategory</label>
    <listViews>
        <fullName>ALL1</fullName>
        <columns>NAME</columns>
        <columns>CategoryFamilyName__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>EnterpriseID__c</columns>
        <columns>ProductCategoryID__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CategoryName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product SubCategory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>